overflow fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@ body,
 html {
     margin: 0;
     font-family: poppins, Arial;
+    overflow: hidden;
 }
 header {
     z-index: 1;
